# vacancies_hh.ru

./: .env.example  README.md  main.py  pyproject.toml
src/: api_hh.py  logger.py  save_to_json.py
tests/: conftest.py  test_api_hh.py  test_save_to_json.py
